# ycombigenerator

./: .gitignore  README.md  pyproject.toml
data/: companies.csv  supplement.csv
src/ycombigenerator/: analyzer.py  cli.py  generator.py  plot.py  scraper.py
