[project]
name = "ycombigenerator"
version = "0.1.0"
description = "YC company analyzer and hypothetical startup generator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28",
    "typer>=0.26",
    "rich>=15.0",
    "opencode-sdk>=0.2",
    "matplotlib>=3.11.0",
]

[project.scripts]
yc = "ycombigenerator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ycombigenerator"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
